tests/samples/negative/types/cast_source_literal_overflow.ax
module cast_source_literal_overflow;

fn main() -> i32 {
  let value: u64 = ((4294967296) as u64);
  return ((value) as i32);
}
